--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-bgcolor="#d212e3"
+<!DOCTYPE html>
 <html>
  <head>
   <title>Dogs</title>
  </head>
  <body>
+<body style="background-color:green;">
 <ol> 
 Dogs and people have lived together for thousands of years.
 The first pet dogs helped people hunt.
