--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
  </h1>
  <body>
 <body style="background-color:green;">
-<ol> 
+<p> 
 Dogs and people have lived together for thousands of years.
-The first pet dogs helped people hunt.
-Foxes, wolves, and dogs are all in the same. family
-The first pet dogs lived 33,000 years ago. 
-In ancient Egypt it was common for a king or queen’s favorite dog to be buried with the ruler.
-Dogs help people by doing many different jobs
-</ol>
+<br>The first pet dogs helped people hunt.
+<br>Foxes, wolves, and dogs are all in the same. family
+<br>The first pet dogs lived 33,000 years ago. 
+<br>In ancient Egypt it was common for a king or queen’s favorite dog to be buried with the ruler.
+<br>Dogs help people by doing many different jobs
+</p>
  </body>
 </html>
