--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
- <h1>
-  <title>Dogs</title>
- </h1>
+<h1 style="font-size:60px;">DOGS</h1>
  <body>
 <body style="background-color:green;">
 <p> 
