--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <p> 
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
-<br>Foxes, wolves, and dogs are all in the same. family
+<br>Foxes, wolves, and dogs are all in the same family.
 <br>The first pet dogs lived 33,000 years ago. 
 <br>In ancient Egypt it was common for a king or queen’s favorite dog to be buried with the ruler.
-<br>Dogs help people by doing many different jobs
+<br>Dogs help people by doing many different jobs.
 </p>
  </body>
 </html>
