--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <body>
 <body style="background-color:green;">
 <p> 
- <img src="smiley.gif" alt="Smiley face" height="42" width="42">
+ <img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
