--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <body>
 <body style="background-color:green;">
 <p> 
- <img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
+ <img src="http://www.dog.com/badge1.gif" width="120" height="90" alt="Dog">
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
