--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <body>
 <body style="background-color:green;">
 <p> 
- <img src="http://www.dog.com/badge1.gif" width="120" height="90" alt="Dog">
+ <center><a href="http://www.fillster.com/dog-pictures/1/" target="_blank"><img src="http://www.fillster.com/images/pictures/10p.jpg" border="0" alt="Dog Pictures for Myspace"></a><br /><a href="http://www.fillster.com" target="_blank"><img src="http://www.fillster.com/images/lthumb.gif" border="0" alt="Myspace Layouts & HTML Codes"></a><br /><a style="font-size: 12px;" href="http://www.fillster.com/myspace-pictures/" target="_blank">Myspace Pictures</a></center>
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
