--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <h1 style="font-size:60px;">DOGS</h1>
  <body>
-<body style="background-color:green
+<body style="background-color:green;">
 <p>
 href="http://myspace-pictures/" target="_blank">Myspace Pictures</a></center> 
 Dogs and people have lived together for thousands of years.
