--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
  <body>
 <body style="background-color:green;">
 <p>
-href="http://myspace-pictures/" target="_blank">Myspace Pictures</a></center> 
+href="http://<img src="funny-dog.jpg">
+
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
