--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<h1 style="font-size:60px;">DOGS</h1>
+ <center><h1 style="font-size:60px;">DOGS</h1></center>
  <body>
 <body style="background-color:green;">
 <p>
-<href="http://www.fillster.com/dog-pictures/1/">
+ <center><a href="http://www.fillster.com/dog-pictures/1/" </center>
 Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
