--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="background-color:green;">
 <p>
  <center><img src="http://www.fillster.com/images/pictures/10p.jpg"> </center>
-Dogs and people have lived together for thousands of years.
+<br>Dogs and people have lived together for thousands of years.
 <br>The first pet dogs helped people hunt.
 <br>Foxes, wolves, and dogs are all in the same family.
 <br>The first pet dogs lived 33,000 years ago. 
